--- a/css/style.css
+++ b/css/style.css
@@ -819,8 +819,6 @@ footer li {
     /*----------------------main------------------*/
     main {
         width: 100%;
-        /* margin-left: -19px;
-        margin-right: -10px;*/
         padding: 0;
         margin: 0;
         display: flex;
@@ -852,8 +850,6 @@ footer li {
     .plus-populaires ul {
         display: flex;
         flex-direction: column;
-        /* margin-left: 40px;*/
-        /*margin-right: 10px;*/
         padding-left: 10px;
         width: 88vw;
         gap: 20px;
@@ -873,11 +869,12 @@ footer li {
         width: 100%;
         height: 147px;
         gap: 10px;
-        margin-bottom: 0;
-        /* margin-left: -50px;*/
+        margin: 0;
+        border-radius: 20px;
     }
 
     .carte-populaire img {
+        border-radius: 20px 0 0 20px;
         width: 92px;
     }
 
@@ -926,7 +923,8 @@ footer li {
     .carte-hebergement {
         margin-bottom: 8vw;
         width: 88vw;
-        height: 245px;
+        height: 242px;
+        border-radius: 20px;
         box-shadow: 0 0 7px 0 var(--dark);
 
     }
@@ -934,7 +932,8 @@ footer li {
     .carte-hebergement img {
         object-fit: cover;
         /*width: 97.5vw;*/
-        height: 130px;
+        border-radius: 20px 20px 0 0;
+        height: 140px;
     }
 
 
