--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ main ul li {
     margin: auto;
     margin-bottom: 10px;
     border: 2px var(--white) solid;
-    border-radius: 30px;
+    border-radius: 25px;
     /*width: 19.4vw;*/
     /* width: calc((100% - 50px) / 3);*/
     /*height: auto;*/
@@ -270,7 +270,7 @@ main ul li {
 .img-hebergement {
     object-fit: cover;
     border: 2px var(--white) solid;
-    border-radius: 30px 30px 0 0;
+    border-radius: 25px 25px 0 0;
     height: 122px;
     /* width: 18vw;*/
     align-items: center;
@@ -330,7 +330,7 @@ main ul li {
     width: calc(30% - 30px);
     /*height: 680px;*/
     border: 1px solid var(--white);
-    border-radius: 30px;
+    border-radius: 25px;
     gap: 20px;
 }
 
@@ -362,7 +362,7 @@ main ul li {
     display: flex;
     object-fit: cover;
     border: var(--white) 1px solid;
-    border-radius: 30px 0 0 30px;
+    border-radius: 25px 0 0 25px;
     padding: 2px;
     width: 40px;
     min-width: 30%;
@@ -675,6 +675,7 @@ footer li {
         margin: 0 auto;
         margin-bottom: 20px;
         position: relative;
+        padding: 20px 0 10px 0;
     }
 
     nav ul {
@@ -683,6 +684,7 @@ footer li {
         padding: 0;
         list-style: none;
         white-space: nowrap;
+
     }
 
     nav li {
@@ -698,7 +700,7 @@ footer li {
         text-decoration: none;
         margin: 0;
         padding: 0 40px 0 40px;
-
+        /*width: 50%;*/
         /*padding: 0 20px 15px 20px;*/
     }
 
@@ -870,11 +872,11 @@ footer li {
         height: 147px;
         gap: 10px;
         margin: 0;
-        border-radius: 20px;
+        border-radius: 25px;
     }
 
     .carte-populaire img {
-        border-radius: 20px 0 0 20px;
+        border-radius: 25px 0 0 25px;
         width: 92px;
     }
 
@@ -924,7 +926,7 @@ footer li {
         margin-bottom: 8vw;
         width: 88vw;
         height: 242px;
-        border-radius: 20px;
+        border-radius: 25px;
         box-shadow: 0 0 7px 0 var(--dark);
 
     }
@@ -932,7 +934,7 @@ footer li {
     .carte-hebergement img {
         object-fit: cover;
         /*width: 97.5vw;*/
-        border-radius: 20px 20px 0 0;
+        border-radius: 25px 25px 0 0;
         height: 140px;
     }
 
@@ -952,7 +954,7 @@ footer li {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        /*justify-content: center;*/
         width: 100%;
 
     }
@@ -966,12 +968,12 @@ footer li {
         width: 88vw;
         height: 62vw;
         box-shadow: 0 0 7px 0 var(--grey);
-        margin-bottom: 50px;
-        margin-left: -10px;
+        /* margin-bottom: 50px;
+        margin-left: -10px;*/
     }
 
     .carte-activité img {
-        width: 88vw;
+        width: 89vw;
         height: 50vw;
     }
 
