--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,6 @@ footer li {
         padding: 0;
         list-style: none;
         white-space: nowrap;
-
     }
 
     nav li {
@@ -735,6 +734,7 @@ footer li {
         /*padding: 0 35px 0 35px;*/
         padding-bottom: 15px;
         border-bottom: 2px solid var(--blue);
+        width: 50%;
 
     }
 
@@ -782,9 +782,10 @@ footer li {
 
     /*----------------------<section> filtres--------------*/
     .filtres {
-        margin-right: 40px;
+        margin-right: 20px;
         flex-direction: column;
-        padding: 0 20px;
+        padding: 0 30px 0 20px;
+
     }
 
     .filtres h2 {
@@ -802,19 +803,26 @@ footer li {
 
     .filtres li {
         width: 75%;
-        font-size: 11px;
-        padding-right: 20px;
+        font-size: 12px;
+        padding-right: 25px;
     }
 
     .filtres li b {
-        font-size: 12px;
-        padding-left: 5px;
-        padding-right: 20px;
+        font-size: 10px;
+        padding-left: 2px;
+        padding: 0;
+
     }
 
     .info {
-        padding: 0 20px;
+        padding: 0 10px;
     }
+
+    .info i {
+        float: left;
+        margin-right: 10px;
+    }
+
 
 
 
