--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 /*-----------------------------------------------------Css Booki-----------------------------------------*/
 :root {
-    --blue: #0065FC;
+    --blue: #498cf0;
     --light-blue: #DEEBFF;
     --grey: #f3f3f3;
     --grey2: #bebebe;
@@ -27,7 +27,7 @@ ul {
 }
 
 
-/*----------------------Début nav-----------------*/
+/*-----------------------<nav>-----------------*/
 nav {
     display: flex;
     flex-wrap: wrap;
@@ -79,7 +79,7 @@ nav a {
     color: var(--dark);
 }
 
-/*----------------------Début header----------------*/
+/*--------------------------<header>--------------------*/
 
 header {
     padding-top: 20px;
@@ -150,8 +150,7 @@ header input:active {
 }
 
 
-
-/*--------------------------------------------SECTION "filtres"------------------------------------------------*/
+/*-------------------------------------<SECTION>-filtres--------------------------------*/
 
 .filtres {
     display: flex;
@@ -200,18 +199,18 @@ header input:active {
     margin-right: 5px;
 }
 
-/*-------------------------------------fin SECTION "filtres"-----------------------------------------*/
+/*-----------------------------------<main>----------------------------------*/
 main {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    /*justify-content: space-between;*/
-    /*width: 100%;*/
 }
 
 main ul li {
     border: none;
 }
+
+/*-----------------------------------<article>-hebergement----------------------------------*/
 
 .hebergement {
     background-color: var(--grey);
@@ -222,28 +221,22 @@ main ul li {
     width: 70%;
     gap: 20px;
     padding-left: 10px;
-    /*height: 682px;*/
 }
 
 .hebergement h2 {
-    /*width: 90%;*/
     padding: 0 0 0 20px;
 }
 
 .hebergement a {
-    /* width: 33%;*/
     text-decoration: none;
 }
 
 .hebergement ul {
     display: flex;
     flex-wrap: wrap;
-    /*justify-content: space-around;*/
     gap: 20px;
     padding: 0 20px 0 20px;
     margin: 0;
-    /* margin-left: -30px;
-    margin-right: 15px;*/
 }
 
 .hebergement ul li {
@@ -261,9 +254,6 @@ main ul li {
     margin-bottom: 10px;
     border: 2px var(--white) solid;
     border-radius: 25px;
-    /*width: 19.4vw;*/
-    /* width: calc((100% - 50px) / 3);*/
-    /*height: auto;*/
     background-color: var(--white);
 }
 
@@ -272,10 +262,8 @@ main ul li {
     border: 2px var(--white) solid;
     border-radius: 25px 25px 0 0;
     height: 122px;
-    /* width: 18vw;*/
     align-items: center;
 }
-
 
 .description-carte h3 {
     margin: 11px 0 0 11px;
@@ -289,7 +277,6 @@ main ul li {
     margin: 12px 0 0 12px;
     padding-bottom: 5px;
 }
-
 
 .description-carte {
     color: var(--dark);
@@ -322,13 +309,13 @@ main ul li {
     font-weight: bold;
 }
 
-/*--------------------------------------- Début main <article>---------------------*/
+/*---------------------------------------<article>-plus-populaires---------------------*/
+
 .plus-populaires {
     background-color: var(--grey);
     display: flex;
     flex-direction: column;
     width: calc(30% - 30px);
-    /*height: 680px;*/
     border: 1px solid var(--white);
     border-radius: 25px;
     gap: 20px;
@@ -349,7 +336,6 @@ main ul li {
 .plus-populaires ul {
     margin: 0;
     padding-left: 20px;
-
 }
 
 .plus-populaires ul li {
@@ -366,7 +352,6 @@ main ul li {
     padding: 2px;
     width: 40px;
     min-width: 30%;
-    /*height: auto;*/
 }
 
 .plus-populaires a {
@@ -427,7 +412,7 @@ article ul {
     box-shadow: 0 10px 18px 0 hsl(3, 1%, 90%);
 }
 
-/*-----------------------------------------------Activité <aside> -----------------------*/
+/*-----------------------------------------------Activités-<aside> -----------------------*/
 
 aside .activités {
     display: flex;
@@ -473,7 +458,6 @@ aside a {
 .titre {
     box-sizing: content-box;
     padding: 15px 0 8px 5px;
-    /* font-size: 12.5px;*/
 }
 
 /*-----------------------------------------<footer>-------------------------*/
@@ -537,7 +521,7 @@ footer li {
         font-size: inherit;
     }
 
-    /*----------------------hebergement-----------------*/
+    /*----------------------<article>-hebergement-----------------*/
 
     .hebergement {
         width: 100%;
@@ -545,11 +529,9 @@ footer li {
     }
 
     .hebergement h2 {
-        /*font-size: 15px;*/
         padding-top: 15px;
         margin-bottom: 0;
     }
-
 
     .hebergement ul {
         justify-content: space-around;
@@ -568,15 +550,8 @@ footer li {
         margin-right: 3px;
     }
 
-    /*.img-hebergement {
-        object-fit: cover;
-        height: 110px;
-        width: 250px;
-        align-items: center;
-    }*/
+    /*-------------------------------<section>-plus-populaires---------------------*/
 
-
-    /*--------------------------------------- Début main <article>---------------------*/
     .plus-populaires {
         display: flex;
         margin-top: 25px;
@@ -625,7 +600,7 @@ footer li {
     }
 
 
-    /*-----------------------------------------------Activité <aside> -----------------------*/
+    /*---------------------------------------Activités <aside>-----------------------*/
     aside {
         width: 100%;
     }
@@ -651,21 +626,17 @@ footer li {
         height: 280px;
     }
 
-
 }
 
 
 @media screen and (max-width: 767px) {
 
     body {
-        /* width: auto;
-        height: auto;*/
         padding: 0;
+        margin: 0;
     }
 
-
-
-
+    /*-------------------------------------<nav>----------------------------*/
     nav {
         text-align: center;
         flex-flow: column;
@@ -699,7 +670,6 @@ footer li {
         display: inline-block;
         margin: 0;
         padding: 0px;
-
     }
 
 
@@ -716,20 +686,16 @@ footer li {
         border-top: none;
         padding-bottom: 15px;
         border-bottom: 2px solid var(--blue);
-
-
     }
 
-
-    /*----------------------<header>-----------*/
+    /*-------------------------------------<header>--------------------------*/
     header {
         display: flex;
-        /*align-items: center;
-        justify-content: center;*/
         padding: 30px 20px 0 20px;
     }
 
     header p {
+        margin-top: 0;
         text-align: left;
     }
 
@@ -737,11 +703,10 @@ footer li {
         font-size: auto;
     }
 
-
     header input {
         align-items: center;
         justify-content: center;
-        width: 50vw;
+        width: 53vw;
     }
 
     .desktop-button {
@@ -762,16 +727,17 @@ footer li {
         color: var(--white);
     }
 
-    /*----------------------<section> filtres--------------*/
+    /*----------------------<section>-filtres--------------*/
     .filtres {
         margin-right: 20px;
         flex-direction: column;
         padding: 0 30px 0 20px;
-
+        padding-top: 5px;
     }
 
     .filtres h2 {
         margin-right: 100%;
+        margin-bottom: 0;
     }
 
     .filtres ul {
@@ -793,7 +759,6 @@ footer li {
         font-size: 10px;
         padding-left: 2px;
         padding: 0;
-
     }
 
     .info {
@@ -805,9 +770,6 @@ footer li {
         margin-right: 10px;
     }
 
-
-
-
     /*----------------------main------------------*/
     main {
         width: 100%;
@@ -817,7 +779,7 @@ footer li {
         flex-direction: column-reverse;
     }
 
-    /*-----------------------------Le plus populaires-------------------*/
+    /*-----------------------------<section>-plus-populaires-------------------*/
     .plus-populaires {
         height: 600px;
         margin: 0;
@@ -827,16 +789,13 @@ footer li {
         border-radius: unset;
         background-color: var(--grey);
         gap: 20px;
-
     }
-
 
     .plus-populaires h2 {
         justify-content: space-between;
         padding: 20px 10px 10px 10px;
         margin: 0;
         font-size: larger;
-
     }
 
     .plus-populaires ul {
@@ -875,7 +834,7 @@ footer li {
         bottom: -20px;
     }
 
-    /*--------------------------hebergements-----------------------------------*/
+    /*--------------------------<article>-hebergements-----------------------------------*/
 
     .hebergement {
         width: 100%;
@@ -883,7 +842,6 @@ footer li {
         border: none;
         margin: 0;
         padding: 30px 10px 0 10px;
-
     }
 
     .hebergement h2 {
@@ -891,18 +849,12 @@ footer li {
         font-weight: bolder;
         padding: 0;
         margin: 0;
-        /*margin: 30px 0 10px 10px;*/
     }
 
     .hebergement ul {
-        /*margin-right: 10px;*/
         padding: 0;
         margin: 0;
-        /*margin-bottom: 20px;*/
         display: flex;
-
-        /* align-items: center;
-        justify-content: center;*/
         flex-direction: column;
     }
 
@@ -923,7 +875,6 @@ footer li {
 
     .carte-hebergement img {
         object-fit: cover;
-        /*width: 97.5vw;*/
         border-radius: 25px 25px 0 0;
         height: 140px;
     }
@@ -938,19 +889,17 @@ footer li {
     }
 
 
-    /*-------------------------activités-------------------*/
+    /*-------------------------<aside>-activités-------------------*/
 
     aside .activités {
         display: flex;
         flex-direction: column;
         align-items: center;
-        /*justify-content: center;*/
         width: 100%;
-
     }
 
     aside h2 {
-        /*margin-left: -10px;*/
+
         padding: 0 0 20px 10px;
     }
 
@@ -958,8 +907,7 @@ footer li {
         width: 88vw;
         height: 62vw;
         box-shadow: 0 0 7px 0 var(--grey);
-        /* margin-bottom: 50px;
-        margin-left: -10px;*/
+
     }
 
     .carte-activité img {
@@ -968,12 +916,12 @@ footer li {
     }
 
     .titre {
-        padding-left: 3px;
+        padding-left: 10px;
         font-size: 4vw;
     }
 
 
-    /*-------------------footer-----------*/
+    /*--------------------------footer--------------*/
 
     footer {
         display: flex;
@@ -982,6 +930,5 @@ footer li {
         align-items: flex-start;
         padding-left: 20px;
     }
-
 
 }
