--- a/css/style.css
+++ b/css/style.css
@@ -218,11 +218,12 @@ main ul li {
     border-radius: 30px;
     width: 70%;
     gap: 20px;
-    padding-left: 10px;
+    /* padding-left: 10px;*/
 }
 
 .hebergement h2 {
-    padding: 0 0 0 20px;
+    margin: 0;
+    padding: 20px 0 0 20px;
 }
 
 .hebergement a {
@@ -239,7 +240,7 @@ main ul li {
 
 .hebergement ul li {
     margin: 0;
-    padding: 0;
+    padding: 0 5px 0 5px;
     box-sizing: border-box;
     width: calc((100% - 50px) / 3)
 }
@@ -247,8 +248,9 @@ main ul li {
 .carte-hebergement {
     display: flex;
     flex-direction: column;
-    margin: auto;
-    margin-bottom: 10px;
+    margin: 0;
+    height: 215px;
+    /* margin-bottom: 10px;*/
     border: 2px var(--white) solid;
     border-radius: 25px;
     background-color: var(--white);
@@ -262,27 +264,31 @@ main ul li {
     align-items: center;
 }
 
+.description-carte {
+    padding: 10px;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+}
+
 .description-carte h3 {
-    margin: 11px 0 0 11px;
+    margin: 0;
 }
 
 .description-carte p {
-    margin: 9px 0 10px 12px;
+    margin: 0px
 }
 
 .note-hebergement {
-    margin: 12px 0 0 12px;
-    padding-bottom: 5px;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
 }
 
 .description-carte {
     color: var(--dark);
 }
 
-.note-hebergement {
-    margin: 12px 0 0 12px;
-    text-decoration: none;
-}
 
 .note-hebergement .fa-star {
     color: var(--blue);
@@ -359,14 +365,14 @@ main ul li {
 
 .carte-populaire {
     display: flex;
-    margin: auto;
+    margin: 0;
     margin-bottom: 40px;
     border: 1px var(--white);
     border-radius: 30px;
     width: 94%;
     height: 150px;
     background-color: var(--white);
-    margin-right: 30px;
+    /*margin-right: 30px;*/
 }
 
 article ul {
@@ -374,22 +380,33 @@ article ul {
 }
 
 .texte-populaire {
-    padding: 0 5px;
+    padding: 10px;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+
 }
 
 .texte-populaire p {
-    padding-bottom: 10px;
-    padding-top: 0;
+    /*padding-bottom: 10px;
+    padding-top: 0;*/
     font-size: 13px;
-    margin: -10px 0 0 0;
+    padding: 0;
+    margin: 0;
+}
+
+
+.texte-populaire h3 {
+    margin: 0;
 }
 
 .note-populaire {
     display: flex;
     align-items: flex-start;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    padding-top: 10%;
+    /*padding-top: 10%;*/
 }
 
 
@@ -414,7 +431,6 @@ article ul {
 aside .activités {
     display: flex;
     gap: 20px;
-
 }
 
 aside h2 {
@@ -427,13 +443,13 @@ aside a {
     text-decoration: none;
 }
 
-
 .carte-activité {
-    width: calc(100% - 10px);
+    width: 100%;
     border: 1px var(--white) solid;
     border-radius: 20px 20px 20px 20px;
+    /*width: 30vw;*/
     margin: 0;
-    padding-bottom: 10px;
+    /*padding-bottom: 10px;*/
     box-shadow: 0 0 7px 0 hsl(3, 1%, 90%);
 }
 
@@ -454,7 +470,11 @@ aside a {
 
 .titre {
     box-sizing: content-box;
-    padding: 15px 0 8px 5px;
+    padding: 10px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 /*-----------------------------------------<footer>-------------------------*/
@@ -523,28 +543,28 @@ footer li {
     .hebergement {
         width: 100%;
         height: auto;
+        padding: 0;
+        margin: 0;
     }
 
     .hebergement h2 {
-        padding-top: 15px;
+        padding-top: 30px;
         margin-bottom: 0;
     }
 
     .hebergement ul {
         justify-content: space-around;
-        margin-left: -5px;
-        margin-right: 5px;
-        padding-left: 10px;
+        margin: 0;
+        padding: 0;
+        padding-right: 10px;
     }
 
     .carte-hebergement {
         display: flex;
         flex-direction: column;
-        margin: auto;
-        margin-bottom: 10px;
+        margin: 0;
         width: 28vw;
         height: 230px;
-        margin-right: 3px;
     }
 
     /*-------------------------------<section>-plus-populaires---------------------*/
@@ -558,7 +578,8 @@ footer li {
     }
 
     .plus-populaires h2 {
-        font-size: 100%;
+        /*font-size: 100%;*/
+        padding-left: 30px;
     }
 
     .plus-populaires ul {
@@ -566,17 +587,17 @@ footer li {
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
-        margin-top: 0;
+        margin: 0;
+        padding: 0;
     }
 
     .carte-populaire {
         display: flex;
         flex-direction: row;
-        margin: auto;
-        margin-bottom: 40px;
+        margin: 0;
         width: 25vw;
         height: 148px;
-        margin-right: 20px;
+
     }
 
     .img-populaires {
@@ -790,7 +811,8 @@ footer li {
 
     .plus-populaires h2 {
         justify-content: space-between;
-        padding: 20px 10px 10px 10px;
+        padding: 0;
+        padding: 15px 10px;
         margin: 0;
         font-size: larger;
     }
@@ -807,15 +829,13 @@ footer li {
         width: 100%;
     }
 
-
     .texte-populaire {
-        box-sizing: content-box;
         font-size: 80%;
     }
 
     .carte-populaire {
         width: 100%;
-        height: 147px;
+        height: 152px;
         gap: 10px;
         margin: 0;
         border-radius: 25px;
@@ -826,10 +846,7 @@ footer li {
         width: 92px;
     }
 
-    .carte-populaire i {
-        position: relative;
-        bottom: -20px;
-    }
+
 
     /*--------------------------<article>-hebergements-----------------------------------*/
 
