--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,8 @@ main ul li {
     border-radius: 30px;
     width: 70%;
     gap: 20px;
+    padding: 0;
+    margin: 0;
     /* padding-left: 10px;*/
 }
 
@@ -234,13 +236,14 @@ main ul li {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 0 20px 0 20px;
+    padding: 0 20px;
     margin: 0;
+
 }
 
 .hebergement ul li {
     margin: 0;
-    padding: 0 5px 0 5px;
+    padding: 0;
     box-sizing: border-box;
     width: calc((100% - 50px) / 3)
 }
@@ -384,7 +387,6 @@ article ul {
     display: flex;
     flex-flow: column;
     justify-content: space-between;
-
 }
 
 .texte-populaire p {
@@ -550,13 +552,13 @@ footer li {
     }
 
     .hebergement h2 {
-        padding: 0;
+        padding: 20px 20px;
         margin-bottom: 0;
     }
 
     .hebergement ul {
         margin: 0;
-        padding: 0;
+        padding: 0 20px;
         gap: 20px;
     }
 
@@ -831,7 +833,7 @@ footer li {
     .plus-populaires ul {
         display: flex;
         flex-direction: column;
-        padding-left: 0px;
+        padding-left: 10px;
         width: 88vw;
         gap: 20px;
     }
